@@ -7,7 +7,7 @@ Maintainer: Hadley Wickham <h.wickham@gmail.com>
 Description: An implementation of the grammar of graphics in R. It combines the advantages of both base and lattice graphics: conditioning and shared axes are handled automatically, and you can still build up a plot step by step from multiple data sources. It also implements a sophisticated multidimensional conditioning system and a consistent interface to map data to aesthetic attributes. See the ggplot2 website for more information, documentation and examples.
 Depends: R (>= 2.7)
 Imports: reshape (>= 0.8.0), plyr (>= 0.1.5), splines, MASS, RColorBrewer, grid, proto
-Suggests: quantreg, Hmisc, mapproj, maps, digest, colorspace, hexbin
+Suggests: quantreg, Hmisc, mapproj, maps, digest, colorspace, hexbin, gpclib
 License: GPL
 URL: http://had.co.nz/ggplot2/
 LazyLoad: false
